[project]
name = "tgmusicbot"
version = "1.2.2"
description = "Telegram Music Bot with full playback support using PyTdBot and PyTgCalls"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ashok Shau", email = "ashokshau@t.me" },
]
keywords = [
    "telegram",
    "music",
    "bot",
    "async",
    "tdlib",
    "pytgcalls",
    "voicechat",
    "spotify",
    "ytmusic",
    "opensource",
    "pytdbot",
    "py-tgcalls",
    "yt-dlp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat :: Telegram",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiofiles~=25.1.0",
    "cachetools~=7.1.4",
    "httpx~=0.28.1",
    "kurigram~=2.2.23",
    "meval~=2.5",
    "ntgcalls~=2.2.5",
    "pillow~=12.2.0",
    "psutil~=7.2.2",
    "py-yt-search~=0.7.2",
    "pycryptodome~=3.23.0",
    "pydantic~=2.13.4",
    "pymongo~=4.17.0",
    "py-tgcalls~=2.3.3",
    "pytgcrypto~=1.2.12",
    "pytdbot~=0.10.0.post1",
    "pytz~=2026.2",
    "tdjson~=1.8.65",
    "ujson~=5.13.0",
    "yt-dlp~=2026.6.9",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "setuptools~=80.9.0",
    "black",
    "ruff",
]

[project.scripts]
tgmusic = "TgMusic.__main__:main"

[project.urls]
Homepage = "https://github.com/depinrise/TgMusicBotFork"
Source = "https://github.com/depinrise/TgMusicBotFork"
"Issue Tracker" = "https://github.com/depinrise/TgMusicBotFork/issues"

[tool.uv]
package = true

[tool.setuptools]
packages = [
    "TgMusic",
]
